# fbi_cde_data

./: .gitignore  README.md  pyproject.toml
apps/: app_utils.py  query_interface.py
fbi_dbt/: dbt_project.yml  profiles.yml
fbi_dbt/macros/: date_parsing.sql  generate_schema_name.sql  string_cleaning.sql
fbi_dbt/models/: sources.yml
fbi_dbt/models/std/: std_administrative.sql  std_arrest.sql  std_arrestee.sql  std_batch_header.sql  std_batch_headers.sql  std_offender.sql  std_offense.sql  std_property.sql  std_victim.sql  std_window_arrestee.sql  std_window_ex_clear.sql  std_window_property.sql  test_std_administrative.yml  test_std_arrest.yml  test_std_arrestee.yml  test_std_batch_header.yml  test_std_offender.yml  test_std_offense.yml  test_std_property.yml  test_std_victim.yml  test_std_window_arrestee.yml  test_std_window_ex_clear.yml  test_std_window_property.yml
fbi_dbt/seeds/: offense_codes.csv
fbi_dbt/seeds/nibrs/: population_codes.csv  state_codes.csv
src/: elt.py  extract.py  load.py  utils.py
src/parsers/: constants.py  nibrs.py
tests/: conftest.py  test_app_query_interface.py  test_app_utils.py  test_elt.py  test_load.py
